# hello-world-operator-rs

./: Cargo.toml  Dockerfile  README.md
deploy/: crd-person.yaml  operator.yaml  service-account.yaml
examples/: member1.yaml  person1.yaml  person2.yaml
src/: main.rs
